# irid

./: .gitignore  CMakeLists.txt  README.md  irid.c  irid.h
demo/: CMakeLists.txt
demo/demo_sdl/: CMakeLists.txt
demo/demo_sdl/src/: main.c
irid.xcodeproj/: project.pbxproj
src/core/: irid_color.c  irid_color.h  irid_grid.c  irid_grid.h  irid_layer.c  irid_layer.h  irid_line.c  irid_line.h  irid_palette.c  irid_palette.h  irid_point.c  irid_point.h  irid_spline.c  irid_spline.h  irid_stroke.c  irid_stroke.h  irid_symmetry.c  irid_symmetry.h  irid_tile.c  irid_tile.h
src/decor/: irid_tesselate.c  irid_tesselate.h
src/output/: irid_render.c  irid_render.h
src/sim/: irid_sim.c  irid_sim.h
src/util/: irid_log.c  irid_log.h
test/: CMakeLists.txt
test/src/: color.c  grid.c  main.c  palette.c
work/: irid.sublime-project
work/irid.xcodeproj/: project.pbxproj
